# sterna

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  implementation.md  result  sterna.md
.claude/: settings.json  settings.local.json
.opencode/plugin/: sterna.ts
src/: dag.rs  error.rs  id.rs  index.rs  main.rs  snapshot.rs  storage.rs  types.rs
src/commands/: claim.rs  close.rs  create.rs  dep.rs  depend.rs  export.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  onboard.rs  prime.rs  pull.rs  purge.rs  push.rs  ready.rs  release.rs  reopen.rs  sync.rs  update.rs
sterna/index/: edges  issues
