[package]
name = "sterna"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "st"
path = "src/main.rs"

[dependencies]
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"
chrono = "0.4"
